<resources>
    <string name="app_name">library_main</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_head">头像</string>
    <string name="user_name">姓名</string>
    <string name="user_phone">手机号</string>
    <string name="user_age">年龄</string>
    <string name="user_address">地址</string>
    <string name="year">岁</string>
    <string name="old_password">旧密码</string>
    <string name="sure_password">确认新密码</string>
    <string name="sure_change">确认修改</string>
    <string name="add_manager">添加</string>
    <string name="user_setting">我的设置</string>
    <string name="message_notice">消息通知</string>
    <string name="submit_settlement">确认核算</string>
    <string name="confirm_the_settlement">确认结算</string>
    <string name="order_information">订单信息</string>
    <string name="user_position">职务</string>
    <string name="historical_record">历史纪录</string>
    <string name="order_setting">订单设置</string>
    <string name="out_login">注销</string>
    <string name="mixing_plant_maintenance">搅拌站维护</string>

    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year1">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="about_app">关于</string>
    <string name="accept_list">接单列表</string>
    <string name="order_pic">订单图片</string>
    <string name="price_setting">单价设置</string>
    <string name="update_logo">上传logo</string>
    <string name="accept_car">接单车辆</string>
    <string name="accept_name">发布单位</string>
    <string name="bang_1">汽车泵37米</string>
    <string name="bang_2">汽车泵42-53米</string>
    <string name="bang_3">汽车泵56-62米</string>
    <string name="bang_4">普通固定泵</string>
    <string name="bang_5">高压固定泵</string>
    <string name="beng_car">汽车泵</string>
    <string name="beng_gu">固定泵</string>
    <string name="putong">普通</string>
    <string name="gaoya">高压</string>
    <string name="beng_3">56-62米</string>
    <string name="beng_2">42-53米</string>
    <string name="beng_1">37米</string>
    <string name="distance">距离</string>
    <string name="jiaoban_phone">搅拌站电话</string>
    <string name="total_price">订单总价</string>
    <string name="order_end_time">截止时间</string>
    <string name="recruit">招聘</string>
    <string name="publish_job">发布招聘</string>
    <string name="job_detail">岗位详情</string>
    <string name="job_name">岗位名称</string>
    <string name="salary_range">薪资范围</string>
    <string name="working_place">工作地点</string>
    <string name="qualifications">任职资格</string>
    <string name="welfare_treatment">福利待遇</string>
    <string name="post_requirements">岗位要求</string>
    <string name="work_units">用人单位</string>
    <string name="work_name">单位名称</string>
    <string name="work_address">单位地址</string>
    <string name="work_contact">联系人</string>
    <string name="job_end_time">招聘截至日期</string>
    <string name="release_job">确认发布</string>
    <string name="people_resume">个人简历</string>
    <string name="user_gender">性别</string>
    <string name="native_place">籍贯</string>
    <string name="level_of_education">文化程度</string>
    <string name="marriage">婚姻</string>
    <string name="working_state">工作状态</string>
    <string name="work_experience">工作经历</string>
    <string name="political_landscape">政治面貌</string>
    <string name="religious_beliefs">宗教信仰</string>
    <string name="working_years">工作年限</string>
    <string name="expected_salary">期望薪资</string>
    <string name="release_commit">确定提交</string>
</resources>
