<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/issue_back_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_ffe06e38">

        <ImageView
            android:padding="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:id="@+id/register_back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_45"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/white_back" />

        <TextView
            android:id="@+id/back_tv"
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_11"
            android:text="@string/back"
            android:textSize="@dimen/sp_18" />
        <TextView
            android:id="@+id/title"
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/people_resume"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/user_name"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/user_age"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:layout_weight="1"
                    android:textColor="@color/_333333"
                    android:text="@string/user_gender"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_marginRight="@dimen/dp_16"

                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <RadioButton
                        android:text="男"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                    <RadioButton
                        android:text="女"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/native_place"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/level_of_education"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/marriage"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@color/_E0E0E0"
            android:layout_width="match_parent"
            android:layout_height="1dp">
        </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:layout_weight="1"
                    android:textColor="@color/_333333"
                    android:text="@string/working_state"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_marginRight="@dimen/dp_16"

                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <RadioButton
                        android:text="在职"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:text="离职"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/political_landscape"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/religious_beliefs"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_16"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/working_years"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/_333333"
                    android:layout_marginRight="@dimen/dp_16"
                    android:text="年"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginRight="@dimen/dp_16"
                android:background="@color/_E0E0E0"
                android:layout_width="match_parent"
                android:layout_height="1dp">
            </View>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <TextView
                    android:textColor="@color/_333333"
                    android:text="@string/expected_salary"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="null"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/_333333"
                    android:layout_marginRight="@dimen/dp_16"
                    android:text="k"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/work_experience"
                android:textColor="@color/_333333"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:text=""
                android:gravity="top|left"
                android:paddingLeft="@dimen/dp_5"
                android:paddingTop="@dimen/dp_5"
                android:background="@drawable/shape_et_ed_8"
                android:layout_marginRight="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_15"
                android:minHeight="@dimen/dp_80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center"
                android:id="@+id/release_order"
                android:gravity="center"
                android:textColor="@color/FFFFFF"
                android:text="@string/release_commit"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_46"
                android:background="@drawable/shape_login"
                android:layout_width="@dimen/dp_302"
                android:layout_height="@dimen/dp_42" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>