<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/_F3F4F4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/_ffe06e38">

        <ImageView
            android:padding="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:id="@+id/register_back"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_45"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@mipmap/white_back" />

        <TextView
            android:id="@+id/back_tv"
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_42"
            android:layout_marginTop="@dimen/dp_11"
            android:text="@string/back"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:textColor="@color/FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/user_setting"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>

    <LinearLayout
        android:background="@color/FFFFFF"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:textColor="@color/_333333"
            android:layout_marginLeft="@dimen/dp_13"
            android:text="砼车"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/dp_14"
            android:hint="请输入单价"
            android:digits="1234567890"
            android:inputType="phone|number"
            android:id="@+id/tongche_et"
            android:textColor="@color/_333333"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/_000000"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_gravity="center"
            android:text="元/方"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:text="注：25公里以内 运价=运量*单价 \n 25公里以上 每多一公里加1元/方 "
        android:background="@color/FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="@dimen/dp_13"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="泵车"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:background="@color/FFFFFF"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:textColor="@color/_333333"
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/bang_1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/dp_14"
            android:hint="请输入单价"
            android:digits="1234567890"
            android:inputType="phone|number"
            android:id="@+id/bang_1et"
            android:textColor="@color/_333333"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/_000000"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_gravity="center"
            android:text="元/方"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:background="@color/FFFFFF"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:textColor="@color/_333333"
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/bang_2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/dp_14"
            android:hint="请输入单价"
            android:digits="1234567890"
            android:inputType="phone|number"
            android:id="@+id/bang_2_et"
            android:textColor="@color/_333333"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/_000000"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_gravity="center"
            android:text="元/方"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:background="@color/FFFFFF"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:textColor="@color/_333333"
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/bang_3"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/dp_14"
            android:hint="请输入单价"
            android:digits="1234567890"
            android:inputType="phone|number"
            android:id="@+id/bang_3_et"
            android:textColor="@color/_333333"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/_000000"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_gravity="center"
            android:text="元/方"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:background="@color/FFFFFF"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:textColor="@color/_333333"
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/bang_4"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/dp_14"
            android:hint="请输入单价"
            android:digits="1234567890"
            android:inputType="phone|number"
            android:id="@+id/bang_4_et"
            android:textColor="@color/_333333"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/_000000"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_gravity="center"
            android:text="元/方"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:background="@color/FFFFFF"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44">
        <TextView
            android:textColor="@color/_333333"
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/bang_5"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:textSize="@dimen/dp_14"
            android:hint="请输入单价"
            android:digits="1234567890"
            android:inputType="phone|number"
            android:id="@+id/bang_5_et"
            android:textColor="@color/_333333"
            android:gravity="right"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/_000000"
            android:layout_marginRight="@dimen/dp_13"
            android:layout_gravity="center"
            android:text="元/方"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/sure_change"
        android:gravity="center"
        android:textColor="@color/FFFFFF"
        android:text="@string/sure_change"
        android:layout_marginBottom="@dimen/dp_20"
       android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_200"
        android:background="@drawable/shape_login"
        android:layout_width="@dimen/dp_302"
        android:layout_height="@dimen/dp_42" />
</LinearLayout>